fix: add wrap to mobile version and fix button styles

--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -3,18 +3,6 @@
   margin: auto;
 }
 
-@media (max-width: 640px) {
-  .contact-us {
-    margin: auto 10px;
-  }
-}
-
-@media (min-width: 640px) and (max-width: 1000px) {
-  .contact-us {
-    margin: auto 20px;
-  }
-}
-
 .margin-title {
   margin-bottom: 80px;
 }
@@ -37,7 +25,7 @@ label {
   color: var(--color-neutral-medium);
 }
 
-#summit {
+#submit {
   display: block;
   padding: 5px;
   padding: 20px;
@@ -46,7 +34,7 @@ label {
   margin-bottom: 100px;
 }
 
-#summit:hover {
+#submit:hover {
   background-color: var(--color-primary-hover);
   color: var(--color-neutral-dark);
 }
@@ -58,4 +46,24 @@ label {
 
 .two-col-element {
   width: 48%;
+}
+
+@media (max-width: 640px) {
+  .contact-us {
+    margin: auto 10px;
+  }
+
+  .two-col-form {
+    flex-wrap: wrap;
+  }
+
+  .two-col-element {
+    width: 100%;
+  }
+}
+
+@media (min-width: 640px) and (max-width: 1000px) {
+  .contact-us {
+    margin: auto 20px;
+  }
 }
